--- a/Extraction_Of_Tweets.ipynb
+++ b/Extraction_Of_Tweets.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Extraction_Of_Tweets.ipynb",
+      "name": "Copy of Extraction_Of_Tweets.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -83,7 +83,7 @@
         "        w = csv.writer(file)\n",
         "        w.writerow(['TweetDate', 'TweetText', 'TweetAuthor','TweetLocation','AllHashtags'])\n",
         "        # Iterate and extract tweets\n",
-        "        for tweet in tweepy.Cursor(api.search, q=hashtag+' -filter:retweets', lang=\"en\", since = \"2021-02-15\", until = \"2021-03-18\", tweet_mode='extended').items(10000):\n",
+        "        for tweet in tweepy.Cursor(api.search, q=hashtag, lang=\"en\", since = \"2021-03-11\", until = \"2021-03-26\", tweet_mode='extended').items(10000):\n",
         "          w.writerow([tweet.created_at, tweet.full_text, tweet.user.screen_name,tweet.user.location, [e['text'] for e in tweet._json['entities']['hashtags']]])\n",
         "\n",
         "api_key = getpass.getpass('Enter twitter consumer api key :  ')\n",
@@ -126,7 +126,7 @@
         "dataFrame.to_csv( \"CovidVaccine.csv\", index=False, encoding='utf-8-sig')\n",
         "dataFrame\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
