--- a/Extraction_Of_Tweets.ipynb
+++ b/Extraction_Of_Tweets.ipynb
@@ -31,24 +31,24 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e6a251f5-eb37-4f5d-be70-3a03fbfb592e"
+        "outputId": "ec759bd3-4c63-413a-da78-1a8bccb08126"
       },
       "source": [
         "!pip install tweepy\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: tweepy in /usr/local/lib/python3.7/dist-packages (3.10.0)\n",
-            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.7/dist-packages (from tweepy) (1.15.0)\n",
             "Requirement already satisfied: requests[socks]>=2.11.1 in /usr/local/lib/python3.7/dist-packages (from tweepy) (2.23.0)\n",
             "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.7/dist-packages (from tweepy) (1.3.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (2020.12.5)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (3.0.4)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (2.10)\n",
+            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.7/dist-packages (from tweepy) (1.15.0)\n",
             "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (1.24.3)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (3.0.4)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (2020.12.5)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (2.10)\n",
             "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6; extra == \"socks\" in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (1.7.1)\n",
             "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from requests-oauthlib>=0.7.0->tweepy) (3.1.0)\n"
           ],
@@ -101,10 +101,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 864
+          "height": 589
         },
         "id": "XbeTYCudob1m",
-        "outputId": "f4f4d619-8de3-436e-fcb6-3f9297d76e4b"
+        "outputId": "1b41b7cc-9df2-497d-b87c-3df66e8d1387"
       },
       "source": [
         "\n",
@@ -115,7 +115,7 @@
         "import os\n",
         "import glob\n",
         "import pandas as pd\n",
-        "os.chdir(\"/content/InputDataFiles\")\n",
+        "os.chdir(\"/content\")\n",
         "\n",
         "extension = 'csv'\n",
         "all_filenames = [i for i in glob.glob('*.{}'.format(extension))]\n",
@@ -126,7 +126,7 @@
         "dataFrame.to_csv( \"CovidVaccine.csv\", index=False, encoding='utf-8-sig')\n",
         "dataFrame\n"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -208,47 +208,47 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9995</th>\n",
-              "      <td>2021-03-12 12:50:29</td>\n",
-              "      <td>@abc7newsbayarea #CovidVaccine ...of course th...</td>\n",
-              "      <td>chelseazago</td>\n",
-              "      <td>Communist Canada</td>\n",
-              "      <td>['CovidVaccine']</td>\n",
+              "      <td>2021-03-21 04:30:51</td>\n",
+              "      <td>RT @governancenow: #testing mandatory in publi...</td>\n",
+              "      <td>geeminhas</td>\n",
+              "      <td>Mumbai</td>\n",
+              "      <td>['testing', 'Mumbai', 'secondwave']</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9996</th>\n",
-              "      <td>2021-03-12 12:50:21</td>\n",
-              "      <td>Got myshot. Excited!!  #vaccinated #VirusCoron...</td>\n",
-              "      <td>gpickner</td>\n",
-              "      <td>Pierre, SD</td>\n",
-              "      <td>['vaccinated', 'VirusCoronashot']</td>\n",
+              "      <td>2021-03-21 04:30:47</td>\n",
+              "      <td>@Jamienzherald brilliantly summarises and prov...</td>\n",
+              "      <td>JTThaker</td>\n",
+              "      <td>Was, DC, Singap, New Zealand, India</td>\n",
+              "      <td>['vaccine', 'hesitancy', 'COVID19Vaccine', 'Ne...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9997</th>\n",
-              "      <td>2021-03-12 12:50:05</td>\n",
-              "      <td>#Mozambique launches its #Covid19vaccine progr...</td>\n",
-              "      <td>ARCBriefing</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>['Mozambique', 'Covid19vaccine', 'ARCBriefing']</td>\n",
+              "      <td>2021-03-21 04:30:40</td>\n",
+              "      <td>One year Anniversary  Happy #jantacurfew 2020 ...</td>\n",
+              "      <td>MyloMegha</td>\n",
+              "      <td>Fantasy World (Indore) MP</td>\n",
+              "      <td>['jantacurfew', 'COVID19Vaccine']</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9998</th>\n",
-              "      <td>2021-03-12 12:50:03</td>\n",
-              "      <td>#COVID19Vaccine: Karnataka CM B S Yediyurappa ...</td>\n",
-              "      <td>TheDailyPioneer</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>['COVID19Vaccine', 'BSYediyurappa', 'Karnataka...</td>\n",
+              "      <td>2021-03-21 04:30:32</td>\n",
+              "      <td>RT @CameroonReport1: Cameroon Approves Russian...</td>\n",
+              "      <td>oncle_benoit</td>\n",
+              "      <td>Bois-Colombes, France</td>\n",
+              "      <td>['CameroonReport', 'Cameroon', 'COVID19Vaccine...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9999</th>\n",
-              "      <td>2021-03-12 12:49:58</td>\n",
-              "      <td>Time for a full investigation into Ron DeSanti...</td>\n",
-              "      <td>Osceola_DEC</td>\n",
-              "      <td>Osceola County, Florida</td>\n",
-              "      <td>['CovidVaccine', 'DisgracefulDesantis']</td>\n",
+              "      <td>2021-03-21 04:30:32</td>\n",
+              "      <td>RT @HailMarxism: It's easy when you have rich ...</td>\n",
+              "      <td>Budsmu1</td>\n",
+              "      <td>Wurundjeri Country, Vic OZ</td>\n",
+              "      <td>[]</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>26249 rows × 5 columns</p>\n",
+              "<p>120405 rows × 5 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
@@ -259,19 +259,19 @@
               "3     2021-03-17 23:58:03  ...                ['LiarsNParasites', 'CovidVaccine']\n",
               "4     2021-03-17 23:57:37  ...                   ['FiresideChat', 'CovidVaccine']\n",
               "...                   ...  ...                                                ...\n",
-              "9995  2021-03-12 12:50:29  ...                                   ['CovidVaccine']\n",
-              "9996  2021-03-12 12:50:21  ...                  ['vaccinated', 'VirusCoronashot']\n",
-              "9997  2021-03-12 12:50:05  ...    ['Mozambique', 'Covid19vaccine', 'ARCBriefing']\n",
-              "9998  2021-03-12 12:50:03  ...  ['COVID19Vaccine', 'BSYediyurappa', 'Karnataka...\n",
-              "9999  2021-03-12 12:49:58  ...            ['CovidVaccine', 'DisgracefulDesantis']\n",
+              "9995  2021-03-21 04:30:51  ...                ['testing', 'Mumbai', 'secondwave']\n",
+              "9996  2021-03-21 04:30:47  ...  ['vaccine', 'hesitancy', 'COVID19Vaccine', 'Ne...\n",
+              "9997  2021-03-21 04:30:40  ...                  ['jantacurfew', 'COVID19Vaccine']\n",
+              "9998  2021-03-21 04:30:32  ...  ['CameroonReport', 'Cameroon', 'COVID19Vaccine...\n",
+              "9999  2021-03-21 04:30:32  ...                                                 []\n",
               "\n",
-              "[26249 rows x 5 columns]"
+              "[120405 rows x 5 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 1
+          "execution_count": 2
         }
       ]
     }
