--- a/Extraction_Of_Tweets.ipynb
+++ b/Extraction_Of_Tweets.ipynb
@@ -36,7 +36,7 @@
       "source": [
         "!pip install tweepy\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,8 +108,8 @@
       },
       "source": [
         "\n",
-        "# Since twitter is limited to return 10000 records per one user API request. Three differnt files has been generated\n",
-        "# to populate 25000 records of data using above functions and renaming files as #CovidVaccine1.csv, #CovidVaccine2.csv, #CovidVaccine3.csv\n",
+        "# We have fetched 10000 records per one user API request. \n",
+        "# Having three files as #CovidVaccine1.csv, #CovidVaccine2.csv, #CovidVaccine3.csv\n",
         "# Concatinating them to one single file as #CovidVaccine.csv\n",
         "\n",
         "import os\n",
@@ -126,7 +126,7 @@
         "dataFrame.to_csv( \"CovidVaccine.csv\", index=False, encoding='utf-8-sig')\n",
         "dataFrame\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
